# fourier

./: .gitmodules  AngleEditor.cpp  AngleEditor.h  CMakeLists.txt  README.md  asmjit.lib  fourier.pro  fourier.sln  fourier.upp  fourier.vcxproj  fourier.vcxproj.filters  main.cpp  main.lay  trinterp.hpp  win.cpp  wxAngleEditor.cpp  wxAngleEditor.h
Blend2d/: Blend2d.vcxproj  Blend2d.vcxproj.filters
asmjit/: asmjit.vcxproj  asmjit.vcxproj.filters
vs/: fourier.sln  fourier.vcxproj  fourier.vcxproj.filters
